--- a/web/src/components/base/SelectList.module.scss
+++ b/web/src/components/base/SelectList.module.scss
@@ -1,8 +1,8 @@
-.button {
-  &:hover {
-    & .arrow {
-      transform: rotate(180deg);
-    }
+
+
+.buttonOpened {
+  & .arrow {
+    transform: rotate(180deg);
   }
 }
 
@@ -15,6 +15,10 @@
 }
 
 .list {
+  position: absolute;
+  top: 40px;
+  min-width: 200px;
+  background-color: #fff;
   border-radius: 0.375rem;
   max-width: 200px;
   -webkit-box-shadow: -3px 5px 21px -5px rgba(34, 60, 80, 0.2);
