--- a/web/src/components/workplace/SeriesPreview/SeriesInfo.module.scss
+++ b/web/src/components/workplace/SeriesPreview/SeriesInfo.module.scss
@@ -1,4 +1,4 @@
-.patientInfo {
+.patientInfo,.patientSeries {
   margin-right: 20px;
 
   .infoTitle {
@@ -29,8 +29,4 @@
       }
     }
   }
-}
-
-.patientSeries {
-
 }
