--- a/web/src/components/workplace/SeriesPreview/SeriesInfo.module.css
+++ b/web/src/components/workplace/SeriesPreview/SeriesInfo.module.css
@@ -1,4 +1,4 @@
-.patientInfo {
+.patientInfo, .patientSeries {
   margin-right: 20px;
   min-height: 200px;
   border-radius: 12px;
@@ -8,23 +8,23 @@
   -moz-box-shadow: 4px 7px 17px -3px rgba(34, 60, 80, 0.1);
   box-shadow: 4px 7px 17px -3px rgba(34, 60, 80, 0.1);
 }
-.patientInfo .infoTitle {
+.patientInfo .infoTitle, .patientSeries .infoTitle {
   color: #d4d4d8;
   font-size: 17px;
   font-weight: bold;
   display: block;
   margin-bottom: 15px;
 }
-.patientInfo .infoData {
+.patientInfo .infoData, .patientSeries .infoData {
   display: flex;
   flex-direction: column;
 }
-.patientInfo .infoData .infoDataRow {
+.patientInfo .infoData .infoDataRow, .patientSeries .infoData .infoDataRow {
   color: #a1a1aa;
   display: block;
   margin-bottom: 2px;
 }
-.patientInfo .infoData .infoDataRow .infoDataRowValue {
+.patientInfo .infoData .infoDataRow .infoDataRowValue, .patientSeries .infoData .infoDataRow .infoDataRowValue {
   color: #18181b;
 }
 
