--- a/web/src/components/base/SelectList/SelectPopupList.module.scss
+++ b/web/src/components/base/SelectList/SelectPopupList.module.scss
@@ -9,6 +9,7 @@
   -webkit-box-shadow: -3px 5px 21px -5px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: -3px 5px 21px -5px rgba(34, 60, 80, 0.2);
   box-shadow: -3px 5px 21px -5px rgba(34, 60, 80, 0.2);
+  z-index: 9999;
   li {
     padding: 5px 10px;
     cursor: pointer;
