--- a/web/src/components/base/SelectList/SelectList.module.css
+++ b/web/src/components/base/SelectList/SelectList.module.css
@@ -1,3 +1,7 @@
+.buttonSelect:hover {
+  background-color: var(--app-theme-bg-second);
+}
+
 .buttonOpened .arrow {
   transform: rotate(180deg);
 }
