--- a/web/src/components/base/SelectList/SelectPopupList.module.css
+++ b/web/src/components/base/SelectList/SelectPopupList.module.css
@@ -1,4 +1,5 @@
 .list {
+  color: #000000;
   position: absolute;
   top: 45px;
   min-width: 170px;
@@ -17,7 +18,7 @@
 .list li:hover {
   background-color: rgb(245, 245, 245);
   transition: all 0.1s;
-  color: rgb(42, 42, 42);
+  color: rgb(64, 64, 64);
 }
 .list li:last-child {
   border-radius: 0 0 0.375rem 0.375rem;
