--- a/web/src/components/workplace/QuadView/QuadView.module.scss
+++ b/web/src/components/workplace/QuadView/QuadView.module.scss
@@ -11,7 +11,7 @@
   //resize: both;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  border: 1px solid white;
+  border: 1px solid var(--app-theme-bg-third);
   border-bottom: none;
   position: absolute;
   overflow: hidden;
