--- a/web/src/components/workplace/SeriesPreview/SeriesInfoList.module.scss
+++ b/web/src/components/workplace/SeriesPreview/SeriesInfoList.module.scss
@@ -1,4 +1,4 @@
 .tabs {
   background: var(--app-theme-bg-second);
-  border-bottom: 1px solid var(-app-theme-bg)
+  border-bottom: 1px solid var(-app-theme-bg);
 }
