--- a/web/src/components/workplace/SeriesPreview/SeriesInfo.module.css
+++ b/web/src/components/workplace/SeriesPreview/SeriesInfo.module.css
@@ -1,12 +1,12 @@
 .patientInfo, .patientSeries {
   margin-right: 20px;
-  min-height: 200px;
   border-radius: 12px;
   background-color: var(--app-theme-bg-second);
   padding: 10px;
   -webkit-box-shadow: 4px 7px 17px -3px rgba(34, 60, 80, 0.1);
   -moz-box-shadow: 4px 7px 17px -3px rgba(34, 60, 80, 0.1);
   box-shadow: 4px 7px 17px -3px rgba(34, 60, 80, 0.1);
+  margin-bottom: 20px;
 }
 .patientInfo .infoTitle, .patientSeries .infoTitle {
   color: #d4d4d8;
@@ -26,6 +26,16 @@
 }
 .patientInfo .infoData .infoDataRow .infoDataRowValue, .patientSeries .infoData .infoDataRow .infoDataRowValue {
   color: var(--app-theme-primary);
+}
+
+.patientSeries {
+  display: flex;
+  max-height: 240px;
+  min-width: 180px;
+}
+
+.patientInfo {
+  background-color: var(--app-theme-bg-third);
 }
 
 .contextMenu {
