--- a/web/src/components/workplace/SeriesPreview/CalculationSetup/ConnectionInfo.module.css
+++ b/web/src/components/workplace/SeriesPreview/CalculationSetup/ConnectionInfo.module.css
@@ -1,8 +1,9 @@
 .btnList button {
   margin-bottom: 15px;
+  margin-left: 10px;
 }
 .btnList:last-child {
   margin-bottom: 0 !important;
 }
 
-/*# sourceMappingURL=SeriesConnection.module.css.map */
+/*# sourceMappingURL=ConnectionInfo.module.css.map */
