--- a/web/src/components/workplace/SeriesPreview/SeriesInfo.module.css
+++ b/web/src/components/workplace/SeriesPreview/SeriesInfo.module.css
@@ -8,6 +8,16 @@
   box-shadow: 4px 7px 17px -3px rgba(34, 60, 80, 0.1);
   margin-bottom: 20px;
 }
+.patientInfo .header, .patientSeries .header {
+  display: flex;
+  justify-content: space-between;
+}
+.patientInfo .header .menuButton, .patientSeries .header .menuButton {
+  height: 20px;
+  width: 26px;
+  cursor: pointer;
+  background-image: url('data:image/svg+xml,        <svg width="100" height="30" viewBox="0 0 100 30" fill="none" xmlns="http://www.w3.org/2000/svg">          <circle cx="4" cy="8" r="3" fill="white" stroke="black"/>          <circle cx="13" cy="8" r="3" fill="white" stroke="black"/>          <circle cx="22" cy="8" r="3" fill="white" stroke="black"/>        </svg>');
+}
 .patientInfo .infoTitle, .patientSeries .infoTitle {
   color: #d4d4d8;
   font-size: 17px;
@@ -39,8 +49,8 @@
 }
 
 .contextMenu {
-  top: 25px;
-  left: 120px;
+  top: 35px;
+  left: 480px;
 }
 
 /*# sourceMappingURL=SeriesInfo.module.css.map */
