Открытая серия выделяется цветом

--- a/web/src/components/workplace/SeriesPreview/SeriesInfo.module.scss
+++ b/web/src/components/workplace/SeriesPreview/SeriesInfo.module.scss
@@ -49,11 +49,15 @@
   }
 }
 
+.isSelected{
+  border: 3px solid red
+}
+
 .patientSeries {
   display: flex;
 
   max-height: 240px;
-  min-width: 180px;
+  min-width: 300px;
 }
 
 .patientInfo {
