--- a/web/src/App.css
+++ b/web/src/App.css
@@ -31,4 +31,14 @@ body {
   border-bottom: none;
 }
 
+.defaultBehavior .nav-link.active {
+  background-color: white;
+  color: #484848;
+  border: 1px solid #e9e9e9;
+  border-bottom: none;
+}
+.defaultBehavior .nav-link {
+  border-bottom: 1px solid #e9e9e9;
+}
+
 /*# sourceMappingURL=App.css.map */
