--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -38,3 +38,16 @@ body {
 .nav-tabs {
   border-bottom: none;
 }
+
+.defaultBehavior {
+  .nav-link.active {
+    background-color: white;
+    color: #484848;
+    border: 1px solid #e9e9e9;
+    border-bottom: none;
+  }
+
+  .nav-link {
+    border-bottom: 1px solid #e9e9e9;
+  }
+}
